styling fixes for components out of place. Fixing headings on forms

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,14 +1,16 @@
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0px;
-  background-image: linear-gradient(to top, #05c7f2 75%, #d96055),
+  /* background-image: linear-gradient(to top, #05c7f2 75%, #d96055),
     url('https://images.unsplash.com/photo-1486520299386-6d106b22014b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80');
+
   background-blend-mode: luminosity;
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover; */
   height: 100%;
 
   min-height: calc(100vh);
-
   /* background-color: #05c7f2; */
   /* background: linear-gradient(
     135deg,
@@ -76,7 +78,7 @@ body {
 /* This line makes the "Register" and "Login" buttons look like links */
 .link-button {
   background: none;
-  color: white;
+  color: black;
   border: none;
   padding: 15px 0 0 0;
   font: inherit;
