--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,5 +3,5 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  color: white;
+  color: black;
 }
