--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -8,7 +8,7 @@
 
 .nav {
   margin: 0 0 30px;
-  background-color: white;
+  /* background-color: white; */
   overflow: hidden;
 }
 
