--- a/src/components/pages/LandingPage/LandingPage.css
+++ b/src/components/pages/LandingPage/LandingPage.css
@@ -11,6 +11,14 @@ Container
   width: 150px;
 }
 
+.stock {
+  position: relative;
+  top: 50px;
+  left: -55px;
+  width: 913px;
+  height: 305px;
+}
+
 /* --------------------------------------------------------------------------------
 Button
 -------------------------------------------------------------------------------- */
