--- a/src/components/pages/SetUp/SetUp.css
+++ b/src/components/pages/SetUp/SetUp.css
@@ -3,7 +3,7 @@
   /* width: 66%; */
   /* max-width: 100%; */
   /* padding: 1.5% 0; */
-  margin: 0 auto;
+  margin: 0 auto 50px;
   background-color: #f2f2f2;
   border-radius: 3px;
   border-top: 1px solid #d96055;
@@ -15,9 +15,9 @@
   margin: 0 0 15px 0;
   max-width: 100%;
   padding: 15px 20px;
-  background-color: #d8d6d6;
+  background-color: #05c7f2;
   border-radius: 4px;
-  box-shadow: 0 4px 2px rgba(3, 75, 114, 0.4);
+  box-shadow: 0 4px 2px rgba(0, 0, 0, 0.2);
 }
 
 .inner {
