--- a/src/components/pages/SetupSteps/SetUpConfirm/SetUpConfirm.module.css
+++ b/src/components/pages/SetupSteps/SetUpConfirm/SetUpConfirm.module.css
@@ -1,6 +1,6 @@
 .headingBox {
   box-sizing: border-box;
-  padding: 1.5% 2.5%;
+  padding: 1.5% 2.5% 3%;
   margin: -2px auto;
   background-color: #ffffff;
   border-top-right-radius: 3px;
