--- a/src/components/pages/UserPage/UserPage.module.css
+++ b/src/components/pages/UserPage/UserPage.module.css
@@ -1,5 +1,6 @@
 .profile {
   background: linear-gradient(to top, white 50%, #05c7f2 50%);
+  border-radius: 4px;
 }
 
 .profileInfo {
@@ -18,6 +19,6 @@
 .infoBadge {
   border: none;
   border-radius: 4px;
-  background: linear-gradient(to top, #05aff2, #9de3ff);
+  background: linear-gradient(to top, #05c7f2, #9de3ff);
   box-shadow: 1px 6px 3px rgb(0, 0, 0, 0.2);
 }
